--- a/index.html
+++ b/index.html
@@ -5,8 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imran Travel</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header class="header">
+        <!-- navbar Section -->
+        <div class="navbar-section">
+            <div class="name-tag">
+                <div class="logo">
+                    <a class="logo-img" href="index.html"><img src="Images/Group 40071 (2).png" alt="Logo For Company"></a>
+                </div>
+                <div class="name">
+                    <a href="index.html">
+                        <h1>Hero <span class="travel">Travel</span></h1>
+                    </a>
+                </div>
+            </div>
+            <div>
+                <ul class="nav">
+                    <li><a class="home" href="index.html">Home</a></li>
+                    <li><a href="index.html">Testimonial</a></li>
+                    <li><a href="index.html">Packages</a></li>
+                    <li><a href="index.html">Blog</a></li>
+                    <li><a href="index.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- Banner-section -->
+        <div class="banner-section"></div>
+    </header>
 </body>
 </html>
