Header Response work Done

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Header Start -->
     <header class="header">
         <!-- navbar Section -->
         <div class="navbar-section">
             <div class="name-tag">
                 <div class="logo">
-                    <a class="logo-img" href="index.html"><img src="Images/Group 40071 (2).png" alt="Logo For Company"></a>
+                    <a href="index.html"><img class="logo-img" src="Images/Group 40071 (2).png" alt="Logo For Company"></a>
                 </div>
                 <div class="name">
                     <a href="index.html">
@@ -34,7 +35,23 @@
             </div>
         </div>
         <!-- Banner-section -->
-        <div class="banner-section"></div>
+        <div class="banner-section">
+            <div class="banner-title">Explore Your Travel</div>
+            <h5 class="banner-des">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus.</h5>
+            <form class="banner-form">
+                <input type="text" name="" id="where" placeholder="Where Go">
+                <input type="text" name="" id="when" placeholder="When">
+                <input type="text" name="" id="select" placeholder="Select Type">
+                <input class="btn-primary" type="button" value="Find Now">
+            </form>
+        </div>
     </header>
+    <!-- Header End -->
+
+
+    <!-- Main Start -->
+     <main>
+
+     </main>
 </body>
 </html>
