Destination section responsive work done

--- a/index.html
+++ b/index.html
@@ -68,11 +68,47 @@
                 <img class="popular-img" src="Images/Rectangle 4.png" alt="">
             </div>
         </div>
+        <!-- destination-section -->
         <div class="destination-section">
             <div class="destination-title">
                 <h1 class="choose-title">Choose Your Destination</h1>
                 <p class="choose-desc">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
             </div>
+            <div class="destination-img">
+                <div class="item item-1">
+                    <img class="item-img" src="Images/Rectangle 5.png" alt="Maldives">
+                    <h1 class="destination-title-img">Maldives</h1>
+                </div>
+                <div class="item item-2">
+                    <img class="item-img" src="Images/Rectangle 8.png" alt="Indonesia">
+                    <h1 class="destination-title-img">Indonesia</h1>
+                </div>
+                <div class="item item-3">
+                    <img class="item-img" src="Images/Rectangle 6.png" alt="Srilanka">
+                    <h1 class="destination-title-img">Srilanka</h1>
+                </div>
+                <div class="item item-4">
+                    <img class="item-img" src="Images/Rectangle 7.png" alt="North America">
+                    <h1 class="destination-title-img">North America</h1>
+                </div>
+                <div class="item item-5">
+                    <img class="item-img" src="Images/Rectangle 9.png" alt="Kashmir">
+                    <h1 class="destination-title-img">Kashmir</h1>
+                </div>
+                <div class="item item-6">
+                    <img class="item-img" src="Images/Rectangle 11.png" alt="Bangladesh">
+                    <h1 class="destination-title-img">Bangladesh</h1>
+                </div>
+                <div class="item item-7">
+                    <img class="item-img" src="Images/Rectangle 10.png" alt="Bandarbon">
+                    <h1 class="destination-title-img">Bandarbon</h1>
+                </div>
+            </div>
+        </div>
+
+        <!-- Why section -->
+        <div class="why-section">
+            
         </div>
      </main>
 </body>
