Main Work Responsive Done

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <input type="text" name="" id="where" placeholder="Where Go">
                 <input type="text" name="" id="when" placeholder="When">
                 <input type="text" name="" id="select" placeholder="Select Type">
-                <input class="btn-primary" type="button" value="Find Now">
+                <input class="btn-primary format" type="button" value="Find Now">
             </form>
         </div>
     </header>
@@ -106,9 +106,93 @@
             </div>
         </div>
 
-        <!-- Why section -->
-        <div class="why-section">
-            
+        <!-- Card section -->
+        <div class="card-section">
+            <h1 class="choose-title">Why Choose Us</h1>
+            <p class="choose-desc">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+
+            <div class="card-container">
+                <div class="hotel">
+                    <h1 class="card-title">Handpicked Hotels</h1>
+                    <p class="card-desc">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+                <div class="world">
+                    <h1 class="card-title">World Class Service</h1>
+                    <p class="card-desc">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+                <div class="price">
+                    <h1 class="card-title">Best Price Guarantee</h1>
+                    <p class="card-desc">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+            </div>
+        </div>
+
+        <!-- deals section -->
+        <div class="deals-section">
+            <h1 class="deals-title">Deals & Discounts</h1>
+            <p class="deals-desc">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            <div class="deals-container">
+                <div class="hotel-1">
+                    <img class="hotel-img" src="Images/Group 39.png" alt="">
+                    <div class="hotel-desc">
+                        <h1 class="hotel-title">Tour To Satorini</h1>
+                        <p class="hotel-title-desc">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                        <p class="price-tag">Price: $1300-$1500</p>
+                        <button class="btn-primary">Book Now</button>
+                    </div>
+                </div>
+                <div class="hotel-2">
+                    <img class="hotel-img" src="Images/Group 40.png" alt="">
+                    <div class="hotel-desc">
+                        <h1 class="hotel-title">Tour To Satorini</h1>
+                        <p class="hotel-title-desc">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                        <p class="price-tag">Price: $1300-$1500</p>
+                        <button class="btn-primary">Book Now</button>
+                    </div>
+                </div>
+                <div class="hotel-3">
+                    <img class="hotel-img" src="Images/Group 39.png" alt="">
+                    <div class="hotel-desc">
+                        <h1 class="hotel-title">Tour To Satorini</h1>
+                        <p class="hotel-title-desc">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                        <p class="price-tag">Price: $1300-$1500</p>
+                        <button class="btn-primary">Book Now</button>
+                    </div>
+                </div>
+                <button class="btn-primary center-btn">See All Packages</button>
+            </div>
+        </div>
+
+        <!-- Perfetct-section -->
+         <div class="perfect-section">
+            <div class="perfect-container">
+                <h1 class="perfect-title">A Simple Perfect Place To Get Lost</h1>
+                <p class="perfect-desc">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. </p>
+                <ul class="square">
+                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                </ul>
+                <button class="btn-primary">See More</button>
+            </div>
+            <div>
+                <iframe class="perfect-video" width="560" height="315" src="https://www.youtube.com/embed/RNfGo4XxuiU?si=5hB_aP7esmtSKpmB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+         </div>
+         <!-- Newsletter section -->
+        <div class="newsletter-section">
+            <div class="newsletter-content">
+                <h3 class="newsletter-title">Newsletter</h3>
+                <p class="news-desc">Get your daily dose of travel news & tips. Sign up today!</p>
+                <hr style="color: rgba(0, 0, 0, 0.273);">
+                <form class="newsletter-form">
+                    <input type="text" name="" id="name" placeholder="Enter Your Full Name">
+                    <input type="email" name="" id="email" placeholder="Input Your Email">
+                </form>
+                <button class="btn-primary subscribe-btn">Subscribe</button>
+            </div>
+            <div>
+                <img class="news-img" src="Images/Rectangle 8 (1).png" alt="">
+            </div>
         </div>
      </main>
 </body>
