full website responsive done

--- a/index.html
+++ b/index.html
@@ -195,5 +195,26 @@
             </div>
         </div>
      </main>
+
+     <!-- Main end -->
+    <!-- Footer Start -->
+
+    <footer>
+        <div class="imran-container">
+            <img src="Images/Group 40071 (2).png" alt="Imran Travel Logo">
+            <h1 class="imran-title">Imran <span class="travel">Travel</span></h1>
+        </div>
+        <p class="imran-desc">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+        <div class="social-logo">
+            <img class="size" src="Images/twitter-brands-solid.svg" alt="">
+            <img class="size" src="Images/facebook-brands-solid.svg" alt="">
+            <img class="size" src="Images/instagram-brands-solid.svg" alt="">
+            <img class="size" src="Images/github-brands-solid.svg" alt="">
+        </div>
+        <hr style="color: rgba(0, 0, 0, 0.149);">
+        <p class="reserved">2017, All Rights Reserved.</p>
+    </footer>
+
+
 </body>
 </html>
